# Finalizer

./: Cargo.toml  README.md  build.sh
debug/: config.toml  config_bak.toml  game_list.toml
mode/: customize.sh  module.prop  service.sh  uninstall.sh
mode/config/: config.toml
mode/vtools/: disable_userspace_booster.sh  init_vtools.sh  powercfg.json  powercfg.sh
src/: lib.rs  main.rs
src/config/: data.rs  reader.rs
src/cpu_handle/: cpu_freq.rs  cpu_stat.rs  mod.rs
src/devices/: touch.rs
src/scheduler/: game_moniter.rs  manager.rs  mod.rs  mode_switch.rs  screen_moniter.rs
src/utils/: mod.rs
